# spacey

./: .gitignore  LICENSE  README.md  build-client  default.nix  elm.json  nixpkgs.nix  server.cabal
client/: default.nix  elm-srcs.nix  elm.json  update-deps.sh
client/site/: elm.js  index.html
client/src/: Game.elm  Main.elm
server/: Main.hs  default.nix  server.cabal  shell.nix
server/src/: Main.hs
site/: elm.js  index.html
src/: Client.elm  Control.elm  Main.hs
src/List/: Extra.elm
