name:                server
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Basile Henry
maintainer:          bjm.henry@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  main-is:             Main.hs
  build-depends:       base >=4.11 && <4.12
                     , interpolate
                     , scotty
                     , stm
                     , text
                     , wai
                     , wai-extra
                     , wai-middleware-static
                     , wai-websockets
                     , warp
                     , websockets
  hs-source-dirs:      src
  default-language:    Haskell2010
